# cpp-qt-demo-app-android

./: .gitignore  CMakeLists.txt  CMakePresets.json  build.sh  commit.sh  deps.sh  run.sh
android/: AndroidManifest.xml
qml/: Main.qml
src/: main.cpp
